--- a/index.html
+++ b/index.html
@@ -64,6 +64,46 @@
           
         </section>
 
+        <section class="section-features">
+          <div class="row">
+            <div class="col-1-of-4">
+              <div class="feature-box">
+                <i class="feature-box__icon icon-basic-world"></i>
+                <h3 class="heading-tertiary u-margin-bottom-small">Explore the world</h3>
+                <p class="feature-box__text">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae vel dolorem recusandae repudiandae exercitationem distinctio voluptates iste quam 
+                </p>
+              </div>
+            </div>
+            <div class="col-1-of-4">
+              <div class="feature-box">
+                <i class="feature-box__icon icon-basic-compass"></i>
+                <h3 class="heading-tertiary u-margin-bottom-small">Meet nature</h3>
+                <p class="feature-box__text">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae vel dolorem recusandae repudiandae exercitationem distinctio voluptates iste quam asperiores libero
+                </p>
+              </div>
+            </div>
+            <div class="col-1-of-4">
+              <div class="feature-box">
+                <i class="feature-box__icon icon-basic-map"></i>
+                <h3 class="heading-tertiary u-margin-bottom-small">Find your way</h3>
+                <p class="feature-box__text">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae vel dolorem recusandae repudiandae exercitationem distinctio voluptates 
+                </p>
+              </div>
+            </div>
+            <div class="col-1-of-4">
+              <div class="feature-box">
+                <i class="feature-box__icon icon-basic-world"></i>
+                <h3 class="heading-tertiary u-margin-bottom-small">Live a healthier life</h3>
+                <p class="feature-box__text">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae vel dolorem recusandae repudiandae exercitationem distinctio voluptates iste quam asperiores libero
+                </p>
+              </div>
+            </div>
+          </div>
+        </section>
 
       </main>
       
