--- a/index.html
+++ b/index.html
@@ -239,6 +239,13 @@
       </section>
 
       <section class="section-stories">
+        <div class="bg-video">
+          <video class="bg-video__content" loop muted autoplay>
+            <source src="img/video.mp4" type="video/mp4">
+            <source src="img/video.webm" type="video/webm">
+              Your browser is not supported!
+          </video>
+        </div>
         <div class="u-margin-bottom-big u-center-text">
           <h2 class="heading-secondary">
             We make people genuinely happy
@@ -248,6 +255,7 @@
           <div class="story">
             <figure class="story__shape">
               <img src="img/nat-8.jpg" alt="Person on tour" class="story__img">
+              <figcaption class="story__caption">Mary Smith</figcaption>
             </figure>
             <div class="story__text">
               <h3 class="heading-tertiary">
@@ -260,9 +268,29 @@
                 incidunt dolorum ratione quae sit ullam.
               </p>
             </div>
-          </div>
-
+          </div>  
         </div>
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img src="img/nat-9.jpg" alt="Person on tour" class="story__img">
+              <figcaption class="story__caption">Jack Wilson</figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary">
+                WOW! My life is completely different now
+              </h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Officia nobis illo fugit! Nulla incidunt dolorum ratione quae
+                sit ullam, corrupti similique pariatur officia accusamus
+                delectus provident corporis asperiores quia. Dicta? Nulla
+                incidunt dolorum ratione quae sit ullam.
+              </p>
+            </div>
+          </div>
+          <div class="u-center-text u-margin-top-huge">
+            <a href="#" class="btn-text">Read all stories &rarr;</a>
+          </div>
       </section>
 
     </main>
