--- a/index.html
+++ b/index.html
@@ -84,12 +84,32 @@
           </div>
           <div class="col-1-of-2">
             <div class="composition">
+
+              <img srcset="img/nat-1.jpg 300w, img/nat-1-large.jpg 1000w"
+                   sizes="(max-width: 1200px) 23vw, (max-width: 900px) 20vw, (max-width: 600px) 27vw, 300px"
+                   alt="Photo 1"
+                   class="composition__photo composition__photo--1"
+                   src="img/nat-1-large.jpg">
+
+              <img srcset="img/nat-2.jpg 300w, img/nat-2-large.jpg 1000w"
+                   sizes="(max-width: 1200px) 23vw, (max-width: 900px) 20vw, (max-width: 600px) 27vw, 300px"
+                   alt="Photo 2"
+                   class="composition__photo composition__photo--2"
+                   src="img/nat-2-large.jpg">
+
+              <img srcset="img/nat-3.jpg 300w, img/nat-3-large.jpg 1000w"
+                   sizes="(max-width: 1200px) 23vw, (max-width: 900px) 20vw, (max-width: 600px) 27vw, 300px"
+                   alt="Photo 3"
+                   class="composition__photo composition__photo--3"
+                   src="img/nat-3-large.jpg">
+              <!--
               <img src="img/nat-1-large.jpg" alt="Photo 1"
                 class="composition__photo composition__photo--1">
               <img src="img/nat-2-large.jpg" alt="Photo 2"
                 class="composition__photo composition__photo--2">
               <img src="img/nat-3-large.jpg" alt="Photo 3"
                 class="composition__photo composition__photo--3">
+                -->
             </div>
           </div>
         </div>
@@ -275,7 +295,7 @@
         <div class="row">
           <div class="story">
             <figure class="story__shape">
-              <img src="img/nat-8.jpg" alt="Person on tour" class="story__img">
+              <img src="img/nat-8-small.jpg" alt="Person on tour" class="story__img">
               <figcaption class="story__caption">Mary Smith</figcaption>
             </figure>
             <div class="story__text">
@@ -294,7 +314,7 @@
         <div class="row">
           <div class="story">
             <figure class="story__shape">
-              <img src="img/nat-9.jpg" alt="Person on tour" class="story__img">
+              <img src="img/nat-9-small.jpg" alt="Person on tour" class="story__img">
               <figcaption class="story__caption">Jack Wilson</figcaption>
             </figure>
             <div class="story__text">
@@ -363,7 +383,10 @@
 
    <footer class="footer">
       <div class="footer__logo-box">
-        <img src="img/logo-green-2x.png" alt="Logo" class="footer__logo">
+        <picture class="footer__logo">
+          <source srcset="img/logo-green-small-1x.png 1x, img/logo-green-small-2x.png 2x" media="(max-width: 37.5em)">
+            <img srcset="img/logo-green-1x.png 1x, img/logo-green-2x.png 2x" alt="Logo" src="img/logo-green-2x.png">
+        </picture>    
       </div>
       <div class="row">
         <div class="col-1-of-2">
@@ -389,8 +412,21 @@
    <div class="popup" id="popup">
      <div class="popup__content">
        <div class="popup__left">
+        <img srcset="img/nat-8.jpg 2000w, img/nat-8-small.jpg 400w"
+             sizes="(min-width: 112.5em) 25vw, (max-width: 75em) 30vw, (max-width: 56.25em) 45vw, (max-width: 37.5em) 45vw, 390px" 
+             alt="Tour photo"
+             class="popup__img"
+             src="img/nat-8.jpg">
+
+        <img srcset="img/nat-9.jpg 2000w, img/nat-9-small.jpg 400w"
+             sizes="(min-width: 112.5em) 25vw,(max-width: 75em) 30vw, (max-width: 56.25em) 45vw, (max-width: 37.5em) 45vw, 390px" 
+             alt="Tour photo"
+             class="popup__img"
+             src="img/nat-9.jpg">
+<!--
         <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
         <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
+-->
        </div>
        <div class="popup__right">
         <a href="#section-tours" class="popup__close">&times;</a>
